SET(SOURCE_FILES rtdb2_adapter.h rtdb2_adapter.cpp)

ADD_LIBRARY(rtdb STATIC ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(rtdb rtdb2)

SET_SOURCE_FILES_PROPERTIES(${SOURCE_FILES} PROPERTIES LANGUAGE CXX)
SET_TARGET_PROPERTIES(rtdb PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(rtdb PROPERTIES COMPILE_FLAGS "-fPIC")

ADD_SUBDIRECTORY(parser)
